--- a/src/styles.css
+++ b/src/styles.css
@@ -199,14 +199,16 @@ li {
     color: lightgrey;
     font-style: italic;
     font-size: 1.5rem;
+    padding: 1rem;
 }
 
 .biotitle {
-    margin-bottom: 5rem;
+    font-size: 3.5rem;
+    margin-bottom: 4.5rem;
 }
 
 .biodescription {
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     color: white;
     max-width: 41rem;
     text-align: left;
