--- a/src/styles.css
+++ b/src/styles.css
@@ -229,6 +229,15 @@ li {
     display: inline;
 }
 
+.contact {
+    color: lightgray;
+    clear: both;
+    display: block;
+    font-size: 1rem;
+    padding: 2rem 1rem;
+    text-align: center;
+}
+
 @media (min-width: 1024px) {
     .entete {
         float: left;
